--- a/_data/types.yml
+++ b/_data/types.yml
@@ -47,6 +47,9 @@
 - name: Data and Benchmarking track
   tag: DB
   type: track
+- name: Reproducibility Studies and Negative Results Track
+  tag: RENE
+  type: track
   
 # Others
 
