--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1092,42 +1092,42 @@
   description: Mining Software Repositories - Technical Papers
   year: 2026
   link: https://conf.researchr.org/track/msr-2026/msr-2026-technical-papers
-  deadline: ["TBA"]
+  deadline: 
+    - "2025-10-23 23:59"
   date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
-  note: Mandatory abstract deadline TBA.
+  note: Mandatory abstract deadline 20 October 2025.
   tags: [CO, RPT]
 
-- name: MSR-DTST
-  description: Mining Software Repositories - Data and Tool Showcase Track
-  year: 2025
-  link: https://2025.msrconf.org/track/msr-2025-data-and-tool-showcase-track
+- name: MSR-TT
+  description: Mining Software Repositories - Tutorial Track
+  year: 2026
+  link: https://2026.msrconf.org/track/msr-2026-tutorials
   deadline: 
-    - "2024-12-02 23:59"
-  date: April 28 - April 29, 2025 with ICSE 2025
-  place: Ottawa, Ontario, Canada
-  note: Mandatory abstract deadline on November 29, 2024.
-  tags: [CO, TOT, ART]
+    - "2025-12-19 23:59"
+  date: April 12 - April 18, 2026 with ICSE 2026
+  place: Rio de Janeiro, Brazil
+  tags: [CO, TTBT]
 
 - name: MSR-IT
   description: Mining Software Repositories - Industry Track
-  year: 2025
-  link: https://2025.msrconf.org/track/msr-2025-industry-track
+    year: 2026
+  link: https://2026.msrconf.org/track/msr-2026-industry-track
   deadline: 
-    - "2024-12-06 23:59"
-  date: April 28 - April 29, 2025 with ICSE 2025
-  place: Ottawa, Ontario, Canada
-  tags: [CO, JFT]
+    - "2025-11-23 23:59"
+  date: April 12 - April 18, 2026 with ICSE 2026
+  place: Rio de Janeiro, Brazil
+  tags: [CO, IPT]
 
 
 - name: MSR-RR
   description: Mining Software Repositories - Registered Reports
-  year: 2025
-  link: https://2025.msrconf.org/track/msr-2025-registered-reports
+  year: 2026
+  link: https://2026.msrconf.org/track/msr-2026-registered-reports
   deadline: 
-    - "2024-12-05 23:59"
-  date: April 28 - April 29, 2025 with ICSE 2025
-  place: Ottawa, Ontario, Canada
+    - "2025-11-14 23:59"
+  date: April 12 - April 18, 2026 with ICSE 2026
+  place: Rio de Janeiro, Brazil
   note: There are multiple deadlines for different stages (check the call for papers).
   tags: [CO, RRT]
 
