Updated ISSTA 2026 deadline.

--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -861,11 +861,11 @@
 - name: ISSTA
   description: International Symposium on Software Testing and Analysis
   year: 2025
-  link: https://conf.researchr.org/track/issta-2025/issta-2025-papers#Call-for-Papers
+  link: https://conf.researchr.org/track/issta-2026/issta-2026-research-papers
   deadline: 
-  - "2024-10-31 23:59"
-  date: June 25-28, 2025 co-located with FSE 2025
-  place: Trondheim, Norway
+  - "2026-01-29 23:59"
+  date: October 3-9, 2026
+  place: Oakland, California, United States
   tags: [CO, RPT]
 
 # SecDev
