--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1630,6 +1630,15 @@
   - "2025-11-01 23:59"
   tags: [JO]
 
+# TOSEM
+- name: TOSEM - AGENTIC AI in SOFTWARE
+  description: ACM Transactions on Software Engineering and Methodology - AGENTIC AI in SOFTWARE
+  year: 2025
+  link: https://dl.acm.org/pb-assets/static_journal_pages/tosem/pdf/ACM-TOSEM-CfP-Agentic-AI-Software.pdf
+  deadline:
+  - "2025-11-01 23:59"
+  tags: [JO]
+
 - name: VehicleSec
   description: USENIX Vehicle Security and Privacy
   year: 2025
