--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -1631,7 +1631,7 @@
   tags: [JO]
 
 # TOSEM
-- name: TOSEM - AGENTIC AI in SOFTWARE
+- name: TOSEM-AGENTICAI
   description: ACM Transactions on Software Engineering and Methodology - AGENTIC AI in SOFTWARE
   year: 2025
   link: https://dl.acm.org/pb-assets/static_journal_pages/tosem/pdf/ACM-TOSEM-CfP-Agentic-AI-Software.pdf
