--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -66,11 +66,11 @@
 - name: ICSE-DS
   description: International Conference on Software Engineering - Doctoral Symposium
   year: 2025
-  link: https://conf.researchr.org/track/icse-2025/icse-2025-doctoral-symposium
+  link: https://conf.researchr.org/track/icse-2026/icse-2026-doctoral-symposium
   deadline: 
-  - "2024-11-11 23:59"
-  date: April 26 - May 4, 2025
-  place: Ottawa, Ontario, Canada
+  - "2025-11-14 23:59"
+  date: April 12 - April 18, 2026
+  place: Rio de Janeiro, Brazil
   tags: [CO,DOS]
 
 - name: ICSE-T&TB
@@ -1082,7 +1082,8 @@
   description: International Conference on Software Engineering for Adaptive and Self-Managing Systems - Journal First Track
   year: 2026
   link: https://conf.researchr.org/track/seams-2026/seams-2026-journal-first-track
-  deadline: ["TBA"]
+  deadline: 
+    - "2025-12-11 23:59"
   date: April 12 - April 18, 2026 with ICSE 2026
   place: Rio de Janeiro, Brazil
   tags: [CO, JFT]
@@ -1213,14 +1214,13 @@
 - name: REFSQ-RT
   description: Requirements Engineering Foundation for Software Quality - Research Track
   year: 2025
-  link: https://2025.refsq.org/track/refsq-2025-research-papers
+  link: https://2026.refsq.org/track/refsq-2026-research-papers
   deadline:
-   - "2024-11-01 23:59"
-   - "2024-11-08 23:59"
-  date: April 7 - April 10, 2025
-  place: Barcelona, Catalunya, Spain
-  note: Mandatory abstract deadline on November 1st (first deadline) and paper deadline on November 8th (second deadline)
-  tags: [RPT]
+   - "2025-10-17 23:59"
+  date: March 23 - 26, 2026
+  place: Poznań, Poland
+  note: Optional abstract deadline on October 10th and paper deadline on October 17th 
+  tags: [CO, RPT]
 
 - name: XP-RPT
   description: International Conference on Agile Software Development - Research Track
