--- a/_data/conferences.yml
+++ b/_data/conferences.yml
@@ -117,6 +117,7 @@
   description: Student Mentoring Workshop
   year: 2026
   link: https://conf.researchr.org/track/icse-2026/icse-2026-smew---student-mentoring-workshop
+  deadline: 
   - "2025-10-17 23:59"
   date: April 12 - April 18, 2026
   place: Rio de Janeiro, Brazil
